<resources>
    <string name="app_name">Cadela</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google_login_button">Google</string>
    <string name="facebook_login_button">Facebook</string>

    <string name="facebook_app_id">1033465516842243</string>
    <string name="fb_login_protocol_scheme">fb1033465516842243</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="actual_level">Niveau actuel :</string>
    <string name="alarm_time">Temps alarme (sec.) :</string>
    <string name="more">+</string>
    <string name="less">-</string>

    <string name="logout">Déconnexion</string>
    <string name="validate_settings">Valider</string>
    <string name="user_avatar">user_avatar</string>
    <string name="home_actual_level">Niveau actuel :</string>
    <string name="home_starting_program_date">Commencé le :</string>
    <string name="title_activity_workout">WorkoutActivity</string>

    <!-- Workout Activity -->
    <string name="next_exercise">Suivant</string>
    <string name="end_workout">Fin</string>

</resources>
