<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="com.whitecards.cadela.ui.main.tabs.settings.SettingsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.tabs.home.HomeFragment">

        <TextView
                android:text="@string/actual_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="18sp"
                android:layout_marginTop="34dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
        />

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="285dp" android:id="@+id/guideline2"/>
        <Button
                android:text="@string/less"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/level_less" app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"
                android:onClick="@{(v) -> vm.onLessLevelClick(v)}"/>
        <Button
                android:text="@string/more"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/level_more" app:layout_constraintStart_toEndOf="@+id/level_less"
                app:layout_constraintBottom_toBottomOf="@+id/level_less" app:layout_constraintTop_toTopOf="@+id/level_less"
                app:layout_constraintVertical_bias="0.0" android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:onClick="@{(v) -> vm.onMoreLevelClick(v)}"/>
        <TextView
                android:text="@string/alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="18sp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"/>
        <Button
                android:text="@string/less"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_less" app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"
                android:onClick="@{(v) -> vm.onLessAlarmRepetitionClick(v)}"/>
        <Button
                android:text="@string/more"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/alarm_more"
                app:layout_constraintBottom_toBottomOf="@+id/alarm_less"
                app:layout_constraintTop_toTopOf="@+id/alarm_less" app:layout_constraintStart_toEndOf="@+id/alarm_less"
                android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:onClick="@{(v) -> vm.onMoreAlarmRepetitionClick(v)}"/>
        <Button
                android:text="@string/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logout" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(v) -> vm.onLogout(v)}"/>
        <TextView
                android:text="@{vm.actualLevel.toString()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actual_level" android:textSize="18sp" app:layout_constraintEnd_toStartOf="@+id/level_less"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@{vm.alarmTime.toString()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_time" android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/actual_level"
                app:layout_constraintEnd_toEndOf="@+id/actual_level"/>
        <Button
                android:text="@string/validate_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/logout"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/logout"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                android:onClick="@{(v) -> vm.onApplyChange(v)}"
                android:visibility="@{vm.applyChangeButtonVisibility}"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="160dp"
                android:id="@+id/guideline3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>